# flask-on-clean-architecture

./: .gitignore  Dockerfile.dev  Dockerfile.flask  Dockerfile.nginx  README.md  docker-compose.yml  pyproject.toml  renovate.json  run-test.sh  run.sh  test.sqlite3  uwsgi.ini
.devcontainer/: devcontainer.json
.github/workflows/: auto_merge.yml
app/: cli.py  main.py
app/api/v1/: user.py
app/api/v1/swagger/: users.yml
app/applications/: user_create_usecase.py  user_get_usecase.py
app/applications/inbound_dto/: user_input.py
app/applications/outbound_dto/: user_output.py
app/config/: __init__.py  swagger_base.py
app/config/environment/: default.py  development.py  production.py  staging.py  test.py
app/dependencies/: repository_deps.py  usecase_deps.py
app/domains/: user.py
app/exceptions/: __init__.py
app/interfaces/gateways/: user_repository.py
app/interfaces/gateways/database/: db.py  schema.py
app/logger/: logger.py
app/routers/: signup.py
app/static/js/: index.js
app/templates/: 404.html  500.html  index.html
app/templates/signup/: confirm.html  done.html  index.html
myapp/: cli.py  main.py
myapp/api/v1/: user.py
myapp/applications/: create_user_usecase.py  get_user_usecase.py  user_create_usecase.py  user_get_usecase.py
myapp/applications/dto/: user_input.py
myapp/applications/inbound_dto/: user_input.py
myapp/applications/outbound_dto/: user_output.py
myapp/config/: __init__.py  config.py
myapp/config/environment/: default.py  development.py  production.py  staging.py  test.py
myapp/dependencies/: repository_deps.py  usecase_deps.py
myapp/domains/: user.py
myapp/injectors/: __init__.py  repository_injector.py  usecase_injector.py
myapp/interfaces/gateways/: user_repository.py
myapp/interfaces/gateways/database/: db.py  schema.py
myapp/libs/: request_headers.py
myapp/logger/: logger.py
myapp/routers/: entry.py  signup.py
myapp/static/js/: index.js
myapp/templates/: index.html
myapp/templates/entry/: confirm.html  done.html  index.html
myapp/templates/layouts/: application.html
nginx/: nginx.conf.template
tests/: conftest.py  test_repository.py  test_view.py
tests/api/v1/: conftest.py  sample_data.sql  test_user.py
tests/applications/: test_user_create_usecase.py  test_user_get_usecase.py  test_user_input.py  test_user_output.py
tests/config/: conftest.py  test_config.py
tests/domains/: test_user_domain.py
tests/routers/: test_view.py
