[tool.poetry]
name = "flack-on-clean-architecture"
version = "0.1.0"
description = "Example flask app on clean architecture"
authors = ["Suzuki Masaya <ikachang-kawaii@nifty.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
uWSGI = "^2.0.19"
Flask-SQLAlchemy = "^2.5.1"
pydantic = "^1.8.1"
email-validator = "^1.1.2"
psycopg2 = "^2.8.6"
injector = "^0.18.4"
Flask-Injector = "^0.15.0"
flasgger = "^0.9.5"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^6.2.2"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
pysen = "^0.10.1"
pre-commit = "^2.12.0"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.1"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 119
py_version = "py39"

[[tool.pysen.lint.mypy_targets]]
  paths = ["app/"]

[tool.pysen.lint.source]
  includes = ["app/", "tests/"]
